# emulator-hal

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml  clippy.yaml  rustdoc.yaml  rustfmt.yaml  test.yaml
emulator-hal/: Cargo.toml  README.md
emulator-hal-memory/: Cargo.toml  README.md
emulator-hal-memory/src/: lib.rs
emulator-hal/src/: adapter.rs  bus.rs  cpu.rs  lib.rs  step.rs  time.rs
