[package]
name = "emulator-hal-memory"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"
categories = ["no-std", "emulators", "simulation"]
keywords = ["emulators", "simulation"]
description = "implementations of emulator-hal for memory objects"
authors = ["transistor fet <trans@jabberwocky.ca>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/transistorfet/emulator-hal"

[dependencies]
emulator-hal = { path = "../emulator-hal" }

[features]
default = ["std"]
std = []

