[package]
name = "emulator-hal"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"
categories = ["no-std", "emulators", "simulation"]
keywords = ["emulators", "simulation"]
description = "a set of traits for interfacing between emulated hardware devices"
authors = ["transistor fet <trans@jabberwocky.ca>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/transistorfet/moa"

[dependencies]
fugit = { version = "0.3", optional = true }
femtos = { version = "0.1", optional = true }
embedded-time = { version = "0.12", optional = true }

[features]
default = ["alloc"]
alloc = []
std = []
